@@ -58,7 +58,7 @@ properties_activate (GtkWidget *widget, SeahorseWidget *swidget)
 	SeahorseKey *skey;
 	
 	skey = seahorse_key_store_get_selected_key (GTK_TREE_VIEW (
-		glade_xml_get_widget (swidget->xml, KEY_LIST)));
+		glade_xml_get_widget (swidget->xml, KEY_LIST)), NULL);
 	if (skey != NULL)
 		seahorse_key_properties_new (swidget->sctx, skey);
 }
@@ -180,7 +180,7 @@ row_activated (GtkTreeView *treeview, GtkTreePath *path, GtkTreeViewColumn *arg2
 {
 	SeahorseKey *skey;
 	
-	skey = seahorse_key_store_get_key_from_path (GTK_TREE_VIEW (glade_xml_get_widget (swidget->xml, KEY_LIST)), path);
+	skey = seahorse_key_store_get_key_from_path (GTK_TREE_VIEW (glade_xml_get_widget (swidget->xml, KEY_LIST)), path, NULL);
 	if (skey != NULL)
 		seahorse_key_properties_new (swidget->sctx, skey);
 }
@@ -219,7 +219,7 @@ selection_changed (GtkTreeSelection *selection, SeahorseWidget *swidget)
 	
 	if (rows == 1) {
 		skey = seahorse_key_store_get_selected_key (GTK_TREE_VIEW (
-			glade_xml_get_widget (swidget->xml, KEY_LIST)));
+			glade_xml_get_widget (swidget->xml, KEY_LIST)), NULL);
 		secret = (skey != NULL && SEAHORSE_IS_KEY_PAIR (skey));
 	}
 	
@@ -250,7 +250,7 @@ key_list_popup_menu (GtkWidget *widget, SeahorseWidget *swidget)
 {
 	SeahorseKey *skey;
 	
-	skey = seahorse_key_store_get_selected_key (GTK_TREE_VIEW (widget));
+	skey = seahorse_key_store_get_selected_key (GTK_TREE_VIEW (widget), NULL);
 	if (skey != NULL)
 		show_context_menu (swidget, 0, gtk_get_current_event_time ());
        
