@@ -2,7 +2,13 @@
 
 	* libseahorse/seahorse-util.c: Now prompts for alternate 
 	files in the right directory (bug #164962)
-	
+	* libseahorse/seahorse-key-store.c:
+    * libseahorse/seahorse-key-store.h:
+    * src/seahorse-delete.c:
+    * src/seahorse-key-manager.c:
+    * src/seahorse-keyserver-results.c: Allow deletion of UIDs
+    from the main key manager window (bug #164959)
+    
 2005-02-02  Nate Nielsen <nielsen@memberwebs.com>
 
 	* src/seahorse-key-manager.glade: Patch from Adam Schreiber
